--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
    <head>
     <title>my First Web Page</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../Project/CSS/photo_style.css">
     </head>
     <body>
         <!-- NAV -->
@@ -31,7 +32,7 @@
                     <h1>Galery</h1>
                     <div>>
                         <!-- PHOTO CONTAINER 1 -->
-                        <div class="photo container">
+                        <div class="photo-container">
                             <div class="photo">
                                 <img src="../Project/Images/Thumb/thumbnail_1.png" alt="telescope">
                                 <div class="photo-overlay">
@@ -43,7 +44,7 @@
                         <!-- END CONTAINER 1 -->
 
                         <!-- PHOTO CONTAINER 2 -->
-                        <div class="photo container">
+                        <div class="photo-container">
                             <div class="photo">
                                 <img src="../Project/Images/Thumb/thumbnail_2.png" alt="telescope_2">
                                 <div class="photo-overlay">
@@ -55,7 +56,7 @@
                         <!-- END CONTAINER 2 -->
 
                         <!-- PHOTO CONTAINER 3 -->
-                        <div class="photo container">
+                        <div class="photo-container">
                             <div class="photo">
                                 <img src="../Project/Images/Thumb/thumbnail_3.png" alt="telescope_3">
                                 <div class="photo-overlay">
@@ -67,7 +68,7 @@
                         <!-- END CONTAINER 3 -->
 
                         <!-- PHOTO CONTAINER 4 -->
-                        <div class="photo container">
+                        <div class="photo-container">
                             <div class="photo">
                                 <img src="../Project/Images/Thumb/thumbnail_4.png" alt="moon">
                                 <div class="photo-overlay">
@@ -79,7 +80,7 @@
                         <!-- END CONTAINER 4 -->
 
                         <!-- PHOTO CONTAINER 5 -->
-                        <div class="photo container">
+                        <div class="photo-container">
                             <div class="photo">
                                 <img src="../Project/Images/Thumb/thumbnail_5.png" alt="telescope4">
                                 <div class="photo-overlay">
@@ -91,7 +92,7 @@
                         <!-- END CONTAINER 5 -->
 
                         <!-- PHOTO CONTAINER 6 -->
-                        <div class="photo container">
+                        <div class="photo-container">
                             <div class="photo">
                                 <img src="../Project/Images/Thumb/thumbnail_6.png" alt="astronomy">
                                 <div class="photo-overlay">
@@ -103,7 +104,7 @@
                         <!-- END CONTAINER 6 -->
 
                         <!-- PHOTO CONTAINER 7 -->
-                        <div class="photo container">
+                        <div class="photo-container">
                             <div class="photo">
                                 <img src="../Project/Images/Thumb/thumbnail_7.png" alt="galaxy">
                                 <div class="photo-overlay">
@@ -115,7 +116,7 @@
                         <!-- END CONTAINER 7 -->
 
                         <!-- PHOTO CONTAINER 8 -->
-                        <div class="photo container">
+                        <div class="photo-container">
                             <div class="photo">
                                 <img src="../Project/Images/Thumb/thumbnail_8.png" alt="nebula">
                                 <div class="photo-overlay">
@@ -127,7 +128,7 @@
                         <!-- END CONTAINER 8 -->
 
                         <!-- PHOTO CONTAINER 9-->
-                        <div class="photo container">
+                        <div class="photo-container">
                             <div class="photo">
                                 <img src="../Project/Images/Thumb/thumbnail_9.png" alt="">
                                 <div class="photo-overlay">
